--- a/net/templates/edit_profile.html
+++ b/net/templates/edit_profile.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
-{% load i18n interests %}
+{% load i18n %}
     {% block content %}
-        <h1><a href="{% url user_profile profile.username %}">{{ profile.username }}</a></h1>
-        <form action="." method="post">
-            {{ form.as_p }}
-            <input type="submit" value="{% trans "save" %}"/>
+	<div class="h-registration">
+        <div class="b-signup">
+        {% if false %}<h1><a href="{% url user_profile profile.username %}">{{ profile.username }}</a></h1>{% endif %}
+        
+		<form action="." method="post">
+ 		<div class="b-fields-group main-fields">
+            {{ form.as_fs }}
+            <input type="submit" value="{% trans "Save" %}"/>
+		</div>
         </form>
-        <div class="clear"></div>
+		</div>
+		</div>
     {% endblock content %}
   
