--- a/net/templates/registration/login.html
+++ b/net/templates/registration/login.html
@@ -11,7 +11,7 @@
                 {{ form.next }}
                 <input type="submit" value="войти" class="signup-btn"/>
             </form>
-            <p><a href="{% url auth_password_reset %}">{% trans "Recover password" %}</a></p>
+            <p class="b-recover-password"><a href="{% url auth_password_reset %}">{% trans "Recover password" %}</a></p>
         </div>
     </div>
  {% endblock content %}
