--- a/net/templates/registration/registration_form.html
+++ b/net/templates/registration/registration_form.html
@@ -27,8 +27,9 @@
                 <fieldset><label for="password">Пароль</label><input name="password" id="password" type="password" /></fieldset>
                 <input type="hidden" name="next" />
                 <input type="submit" value="войти" class="signup-btn"/>
+<p class="b-recover-password"><a href="{% url auth_password_reset %}">{% trans "Recover password" %}</a></p>
             </form>
-            <p><a href="{% url auth_password_reset %}">{% trans "Recover password" %}</a></p>
+            
         </div>
     </div>
 
