--- a/photo/templates/photo_photos.html
+++ b/photo/templates/photo_photos.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
+{% include i18n %}
             {% block head %}
         <link rel="stylesheet" href="/i/css/thickbox.css" type="text/css" />
-        <script src="/i/js/jquery.js" type="text/javascript" />
-        <script src="/i/js/thickbox-compressed.js" type="text/javascript" />
+        <script src="/i/js/jquery.js" type="text/javascript"></script>
+        <script src="/i/js/thickbox-compressed.js" type="text/javascript"></script>
             {% endblock head %}
             {% block content %}
                 <ul>
