--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -12,8 +12,11 @@
         <link rel="stylesheet" href="/i/css/registration.css" type="text/css" />
         <link rel="stylesheet" href="/i/css/footer.css" type="text/css" />
         <link rel="stylesheet" href="/i/css/personal_info.css" type="text/css" />
+        <link rel="stylesheet" href="/i/css/thickbox.css" type="text/css" />
+
 		<script type="text/javascript" src="/i/js/jquery.min.js"></script>
 		<script type="text/javascript" src="/i/js/jquery-ui.min.js"></script>
+		        <script src="/i/js/thickbox-compressed.js" type="text/javascript"></script>
 		  {% block head %}        
 	        {% endblock head %}
 		<script type="text/javascript">
@@ -35,15 +38,13 @@
 			$('.b-albums a').click(function(){
 					var _t = this;
 					
-				if (!$('.b-wall #wrote-message').is(':visible')){
+				if (!$('.b-albums #album').is(':visible')){
 					
-					$('.b-wall #wrote-message').load($(_t).attr('href'), function(){
+					$('.b-albums #album').load($(_t).attr('href'), function(){
 						$(this).slideDown();
-					
 					});
 				} else {
-					$('.b-wall #wrote-message').slideUp()
-				
+					$('.b-albums #album').slideUp();
 				}
 				return false;
 			});
