--- a/photo/templates/photo_photo.html
+++ b/photo/templates/photo_photo.html
@@ -1,5 +1,5 @@
 <ul>
 {% for a in object_list %}
-    <li><a href="{% url photo.views.photos username %}">{{ a.title }}</a></li>
+    <li><a href="{% url photo.views.photos username %}">{{ a.title }}ss</a></li>
 {% endfor %}
 </ul>
