--- a/photo/templates/photo_create.html
+++ b/photo/templates/photo_create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
             {% block content %}
-                <form action="{% url create_photo album.user.pk,album.pk %}">
+                <form action="{% url create_photo album.user.pk,album.pk %}" enctype="multipart/form-data">
                     {{ form.as_p }}
                     <input type="submit"/>
                 </form>
