--- a/net/templates/edit_profile.html
+++ b/net/templates/edit_profile.html
@@ -6,7 +6,7 @@
         <div class="b-signup">
         {% if false %}<h1><a href="{% url user_profile profile.username %}">{{ profile.username }}</a></h1>{% endif %}
         
-		<form action="." method="post">
+		<form action="." method="post" enctype="multipart/form-data">
  		<div class="b-fields-group main-fields">
             {{ form.as_fs }}
             <input type="submit" value="{% trans "Save" %}"/>
