--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -66,7 +66,7 @@
                 <h1 class="header">{% trans "Wall" %}</h1>
                 	<a href="{% url create_pm "user",profile.id %}">{% trans "Leave a message" %}</a>
                 <div id="wrote-message">&nbsp;</div>
-                {% for msg in profile.get_messages %}
+                {% for msg in profile.get_public_messages %}
                     <div class="b-message">
          
                         {{ msg.from_user.username }}:
