--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -98,6 +98,7 @@
                 &nbsp;
             </div>
             <div class="b-content-container">
+            {{ widgets }}
             {% block content %}
              
             {% endblock content %}
