еще немного верстки

--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -71,33 +71,34 @@
                 </table>
 				<div class="b-block b-wall">
 					<h1>Стена</h1>
-					<ul>
-						<li>Слышишь меня -- стенка клевая</li>
-						<li>Молодец бля</li>
-						<li>Ебануццо бля какая клевая стенка тут у нас нарисовалась</li>
-					</ul>
+				
+						<div class="b-message">
+							<div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
+						<div class="b-message"><div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
+									
+								<div class="b-message"><div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
 					<!-- if is_admin-->
 						<a href="#">Написать</a>
 					<!-- endif -->
 					<a href="#">Еще 12 сообщений</a>
 					
 				</div>
-				<div class="b-block b-album">
+				<div class="b-block b-photos">
 					<h1>Фотографии</h1>
-					<div>
-						<div><img src="#" style="display:block; background: #000; width: 200; height: 150px" /></div>
-						<div><img src="" style="display:block; background: #000; width: 200; height: 150px" /></div>
-						<div><img src="" style="display:block; background: #000; width: 200; height: 150px" /></div>
-						<div><img src="" style="display:block; background: #000; width: 200; height: 150px" /></div>
+					<div class="b-albums">
+						<div class="b-photo"><img src="#" style="display:block; background: #000; width: 150px; height: 100px" /></div>
+						<div class="b-photo"><img src="" style="display:block; background: #000; width: 150px; height: 100px" /></div>
+						<div class="b-photo"><img src="" style="display:block; background: #000; width: 150px; height: 100px" /></div>
+				
 					</div>
-					<a href="#">Еще фотографий: 120, альбомов: 3</a>
+					<a href="#">Остальные фотографии</a>
 				</div>
 				<div class="b-block b-blog">
 					<h1>Дневник</h1>
-					<div><h2>Траляляля</h2>						
+					<div class="b-post"><h2>Траляляля</h2>						
 						<p>Так бывает что странно делать дневники удачно...</p>
 					</div>	
-					<div><h2>Траляляля</h2>						
+					<div class="b-post"><h2>Траляляля</h2>						
 						<p>Так бывает что странно делать дневники удачно...</p>
 					</div>	
 					<!-- if is_admin-->
