--- a/media/css/base.css
+++ b/media/css/base.css
@@ -3,7 +3,7 @@ height: 100%;
 
 }
 body {
-font: 0.8em Arial;
+font: normal 0.8em Arial, Helvetica, Sans-Serif;
 color: #2b2e2e;
 }
 
@@ -36,9 +36,7 @@ color: #06a9f5;
 color: #f9560a;
 }
   
-    h1 {
-font: 40px Georgia;
-}
+
   
     a img {
 border: 0;
@@ -65,6 +63,10 @@ width: 100%;
 
 
 
+}
+
+h1 {
+	font-size: 1.5em;
 }
                 	.license {
 float: left; display: inline;
@@ -103,23 +105,36 @@ table td {
 }
 
 .b-wall {
-	width: 60%;
-	height: 200px;
+	width: 40%;
+	height: 300px;
 	margin-left: 20px;
 	float: left;
 }
-.b-block .b-message {
+
+
+
+.b-wall .b-message {
 	margin-top: 5px;
-	margin-bottom: 15px;
-}
-.b-wall .b-message p {
-	margin-top: 5px;
+	padding-bottom: 5px;
+
+		border-bottom: solid 1px #efefef;
+	width: 100%;
 	margin-bottom: 10px;
 }
-.b-albums {
-	width: 60%;
-	float: left;
 
+.b-message-header {
+	height: 30px; 
+	padding-top: 5px;
+
+}
+.b-message-header img {
+	margin: -5px 10px 0 0;
+}
+.b-photos {
+	width: 20%;
+}
+.b-photos .b-photo {
+	margin: 10px 0 0 0;
 }
 .b-wall {
 	overflow: hidden;
@@ -180,4 +195,8 @@ table td {
 }
 #create-album {
 	display: none;
+}
+
+.b-post {
+	margin: 10px 0 15px 0;
 }
