еще немного верстки

--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -79,6 +79,7 @@
     </head>
     <body>
         <div class="b-page-container">
+		<div class="min-width">&nbsp;</div>
             <div class="b-head">
                 <div class="b-menu">
                     <a href="/me/">Люди</a> <a href="#">Группы</a> <a href="#">RTTV</a>
