--- a/media/css/base.css
+++ b/media/css/base.css
@@ -48,6 +48,7 @@ float: left; display: inline;
 min-height: 100%;
 height: 100%;
 width: 100%;
+min-width: 990px;
 voice-family: "\"}\"";
 voice-family: inherit;
 height: auto;
@@ -199,4 +200,10 @@ table td {
 
 .b-post {
 	margin: 10px 0 15px 0;
+}
+.min-width {
+	height: 0px;
+	overflow: hidden;
+	width: 990px;
+	
 }
