--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -77,9 +77,17 @@
 						<div class="b-message"><div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
 									
 								<div class="b-message"><div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
-					<!-- if is_admin-->
-						<a href="#">Написать</a>
-					<!-- endif -->
+			
+						<div class="b-wall-msg-form" id="wrote-message">
+							<form method="post">
+								<textarea></textarea>
+								<input type="submit" value="Написать" />
+								
+							</form>
+						</div>
+						<a href="#" style="margin-right: 50px;" id="wrote-message-btn">Написать</a>
+						
+				
 					<a href="#">Еще 12 сообщений</a>
 					
 				</div>
